fix: alignment left footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -33,5 +33,6 @@ h9 {
 @media only screen and (max-width: 767px) {
   footer {
     display: grid;
+    justify-content: flex-start;
   }
 }
